--- a/FeT5.html
+++ b/FeT5.html
@@ -1,26 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>FeT5</title>
 </head>
+
 <body>
-    <script src="https://unpkg.com/vue@3"></script>
+    <div id="app" class="container-fluid">
+        <div id="title"></div>
+        <div id="subtitle" class="row">
+            <h2 id="break-label">Break</h2>
+            <h2 id="session-label">Session</h2>
+        </div>
+        <div id="config" class="row">
+            <button id="break-decrement" class="t"></button>
+            <h4 id="break-length" class="t"></h4>
+            <button id="break-increment" class="t"></button>
+            <button id="session-decrement" class="t"></button>
+            <h4 id="session-length" class="t"></h4>
+            <button id="session-increment" class="t"></button>
+        </div>
+        <div id="timer" class="row">
+            <h2 id="timer-label" class="t"></h2>
+            <h4 id="timer-left" class="t"></h4>
+        </div>
+        <div id="control" class="row">
+            <button id="start_stop" class="t"></button>
+            <button id="reset" class="t"></button>
+        </div>
+    </div>
 
-    <div id="app">{{message}}</div>
 
+    <!-- Frameworks -->
+    <script src="https://unpkg.com/vue@2"></script>
+    <script src="vue.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
+    <!-- TEST SCRIPT -->
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </body>
-</html>
 
-<script>
-    const { createApp } = Vue
-  
-    createApp({
-      data() {
-        return {
-          message: 'Hello Vue!'
-        }
-      }
-    }).mount('#app')
-  </script>
+</html>
