--- a/FeT5.html
+++ b/FeT5.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
+    <script src="https://kit.fontawesome.com/19b1cd51f5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -13,26 +14,27 @@
 
 <body>
     <div id="app" class="container-fluid">
-        <div id="title"></div>
+        <div id="title">
+        </div>
         <div id="subtitle" class="row">
-            <h2 id="break-label">Break</h2>
-            <h2 id="session-label">Session</h2>
+            <h3 id="break-label">Break</h3>
+            <h3 id="session-label">Session</h3>
         </div>
         <div id="config" class="row">
-            <button id="break-decrement" class="t"></button>
-            <h4 id="break-length" class="t"></h4>
-            <button id="break-increment" class="t"></button>
-            <button id="session-decrement" class="t"></button>
-            <h4 id="session-length" class="t"></h4>
-            <button id="session-increment" class="t"></button>
+            <button id="break-decrement" @click="setBreak-=1" class="btn"><i class="fa-solid fa-circle-arrow-down"></i></button>
+            <h4 id="break-length" class="t">{{setBreak}}</h4>
+            <button id="break-increment" @click="setBreak+=1" class="btn"><i class="fa-solid fa-circle-arrow-up"></i></button>
+            <button id="session-decrement" @click="sDown" class="btn"><i class="fa-solid fa-circle-arrow-down"></i></button>
+            <h4 id="session-length" class="t">{{setSession}}</h4>
+            <button id="session-increment" @click="sUp" class="btn"><i class="fa-solid fa-circle-arrow-up"></i></button>
         </div>
         <div id="timer" class="row">
             <h2 id="timer-label" class="t"></h2>
-            <h4 id="timer-left" class="t"></h4>
+            <h4 id="timer-left" class="t">{{minute}}:{{second}}</h4>
         </div>
         <div id="control" class="row">
-            <button id="start_stop" class="t"></button>
-            <button id="reset" class="t"></button>
+            <button id="start_stop" @click="playPause" class="btn"><i v-if="!counting" class="fa-solid fa-play"></i><i v-else class="fa-solid fa-pause"></i></button>
+            <button id="reset" @click="reset" class="btn"><i class="fa-solid fa-rotate-left"></i></button>
         </div>
     </div>
 
